add endpoint DELETE /api/v1/products/:id
